--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and should be replaced.-->
-<div class="app">
+<!-- <div class="app">
     <div style="text-align: center">
         <h1 class="app__title">Welcome to {{ title }}</h1>
     </div>
@@ -16,4 +16,7 @@
         width="18"
         src="cross"
     ></oe-icon>
-</div>
+</div> -->
+<!-- <oe-header-sidebar></oe-header-sidebar> -->
+<router-outlet></router-outlet>
+
