--- a/src/app/core/utils/icon/icon.component.html
+++ b/src/app/core/utils/icon/icon.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="src">
+<ng-container *ngIf="src"  routerLinkActive="active" >
     <svg
         [class]="className"
         [attr.width]="width"
