--- a/src/app/core/utils/icon/icon.component.less
+++ b/src/app/core/utils/icon/icon.component.less
@@ -1,6 +1,15 @@
-:host {
-    use,
-    svg {
-        fill: currentcolor;
-    }
+svg {
+    cursor: pointer;
+}
+
+svg:hover use {
+    fill: #109cf1;
+}
+
+::ng-deep a.active use {
+    fill: #109cf1;
+}
+
+::ng-deep .sidebar__item:hover use {
+    fill: #109cf1;
 }
