--- a/src/styles.less
+++ b/src/styles.less
@@ -15,11 +15,15 @@ Otherwise, you would need to import styles by the path:
 // @import "./app/components/dashboard/dashboard.component.less";
 
 // You could alternatively import all ux-ng2 styles like this:
-// @import '@netcracker/ux-ng2/assets/styles/main.less';
+@import "@netcracker/ux-ng2/assets/styles/main.less";
 
 html,
 body {
     background: #e5e5e5;
+}
+
+body {
+    font-family: Poppins, sans-serif;
 }
 
 .svg__hidden {
