--- a/src/app/components/login/login.component.less
+++ b/src/app/components/login/login.component.less
@@ -81,6 +81,22 @@
     outline: none;
 }
 
+.alert {
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 0.01em;
+    line-height: 17px;
+    text-align: left;
+}
+
+.alert-danger {
+    color: #e74c3c;
+}
+
+.alert-danger__border {
+    border-color: #e74c3c;
+}
+
 .login__btn {
     display: block;
     padding: 5px 10%;
