--- a/src/app/components/registration/registration.component.less
+++ b/src/app/components/registration/registration.component.less
@@ -122,3 +122,19 @@ body {
     transform: scale(1.1);
     transition: transform 0.3s;
 }
+
+.alert {
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 0.01em;
+    line-height: 17px;
+    text-align: left;
+}
+
+.alert-danger {
+    color: #e74c3c;
+}
+
+.alert-danger__border {
+    border-color: #e74c3c;
+}
