--- a/src/app/components/login/login.component.less
+++ b/src/app/components/login/login.component.less
@@ -71,7 +71,7 @@
 }
 
 .login__input-feild {
-    padding: 5px;
+    padding: 5px 0;
     border-style: none;
     border-bottom: 1px solid #bdc3c7;
     background-color: transparent;
