--- a/src/app/components/products/products.component.less
+++ b/src/app/components/products/products.component.less
@@ -108,6 +108,13 @@
     padding: 0 3%;
 }
 
+.product__heading {
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0.01em;
+    line-height: 30px;
+}
+
 .product__categories {
     display: grid;
     justify-content: space-between;
